# micro16

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp  micro16.cpp  micro16.hpp  sdl_screen.cpp  sdl_screen.hpp
.github/workflows/: cmake.yml
docs/: cpu-manual.md  how-to-compile.md  isa.md
examples/: example.bf  led_blink.m16asm  led_blink.micro16  pixel_art_example.m16asm  set_pixels.m16asm
src/: CMakeLists.txt  argparse.hpp  isa.h  main.cpp  micro16.cpp  micro16.hpp  reader.cpp  reader.hpp  sdl_screen.cpp  sdl_screen.hpp  specs.h
src/assembler/: README.md  lexer.cpp  lexer.hpp  main.cpp  output_utils.h  parser.cpp  parser.hpp
src/brainfuck/: README.md  compiler.cpp  compiler.hpp  main.cpp
src/tests/: catch_extensions.hpp  test_assembler.cpp  test_instructions.cpp
src/tests/test_assembler/: all_instructions.m16asm  sections.m16asm
tools/pixel_art_to_m16data/: pa_to_m16data.py  pixel_art.m16asm.template
